// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'offline state' > offline state 1`] = `
<div>
  <div
    class="flex flex-row pt-2"
  >
    <div
      class="w-3 h-3 rounded-full bg-(--pd-status-paused)"
    />
     
    <div
      aria-label="Context connection lost"
      class="ml-1 text-xs text-(--pd-status-paused)"
    >
      CONNECTION LOST
    </div>
    <!---->
  </div>
   
  <div>
    <button
      aria-label="Connect to context ctx-1"
      class="relative px-4 py-[5px] box-border whitespace-nowrap select-none transition-all outline-transparent focus:outline-[var(--pd-button-primary-hover-bg)] bg-[var(--pd-button-primary-bg)] text-[var(--pd-button-text)] border-none hover:bg-[var(--pd-button-primary-hover-bg)] rounded-[4px] "
      type="button"
    >
      <!---->
      Connect
      
      <!---->
    </button>
    <!---->
  </div>
  <!---->
  
</div>
`;

exports[`'unknown state' > unknown state 1`] = `
<div>
  <div
    class="flex flex-row pt-2"
  >
    <div
      class="w-3 h-3 rounded-full bg-(--pd-status-disconnected)"
    />
     
    <div
      aria-label="Context Unknown"
      class="ml-1 text-xs text-(--pd-status-disconnected)"
    >
      UNKNOWN
    </div>
    <!---->
  </div>
   
  <div>
    <button
      aria-label="Connect to context ctx-1"
      class="relative px-4 py-[5px] box-border whitespace-nowrap select-none transition-all outline-transparent focus:outline-[var(--pd-button-primary-hover-bg)] bg-[var(--pd-button-primary-bg)] text-[var(--pd-button-text)] border-none hover:bg-[var(--pd-button-primary-hover-bg)] rounded-[4px] "
      type="button"
    >
      <!---->
      Connect
      
      <!---->
    </button>
    <!---->
  </div>
  <!---->
  
</div>
`;

exports[`'unreachable state' > unreachable state 1`] = `
<div>
  <div
    class="flex flex-row pt-2"
  >
    <div
      class="w-3 h-3 rounded-full bg-(--pd-status-disconnected)"
    />
     
    <div
      aria-label="Context Unreachable"
      class="ml-1 text-xs text-(--pd-status-disconnected)"
    >
      UNREACHABLE
    </div>
    <!---->
  </div>
   
  <div>
    <button
      aria-label="Connect to context ctx-1"
      class="relative px-4 py-[5px] box-border whitespace-nowrap select-none transition-all outline-transparent focus:outline-[var(--pd-button-primary-hover-bg)] bg-[var(--pd-button-primary-bg)] text-[var(--pd-button-text)] border-none hover:bg-[var(--pd-button-primary-hover-bg)] rounded-[4px] "
      type="button"
    >
      <!---->
      Connect
      
      <!---->
    </button>
    <!---->
  </div>
  <!---->
  
</div>
`;
